fix: prevent background image blue border from bleeding through
Change background-repeat from repeat-x to no-repeat on #container
across all stylesheets and add white background-color fallback. The
header background images have a blue double-line at their bottom edge
that was showing mid-page.

--- a/historymatters.gmu.edu/hm_newsletter_style.css
+++ b/historymatters.gmu.edu/hm_newsletter_style.css
@@ -6,7 +6,7 @@ div {
     margin: 10px 0;
 }
 #wrap {
-	background:url(images/header_bg_old.jpg) top repeat-x;
+	background:url(images/header_bg_old.jpg) top no-repeat;
 	background-color: #fff;
 	text-align: center;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
