--- a/historymatters.gmu.edu/hm_search_style.css
+++ b/historymatters.gmu.edu/hm_search_style.css
@@ -34,7 +34,8 @@ h2, h3, h4 {
 	font-size: 14px;
 }
 #container {
-	background:url(images/header_bg_old.jpg) top repeat-x;
+	background:url(images/header_bg_old.jpg) top no-repeat;
+	background-color: #fff;
 	margin: 0 auto;
 	width: 780px;
 	text-align: left;
